messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
  labels:
    app: messaging-app
    version: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
      spec:
        containers:
        - name: django-green-container
          image: messaging_app:green   # New image version
          ports:
            - containerPort: 8000
