messaging_app/messaging_app/Service.yaml
apiVersion: v1

kind: Service

metadata:
  name: messaging_app_service
spec:
  selector:
    app: messaging_app
  ports:
  - protocol: TCP
    port: 8000
    targetport: 8000 
  type: ClusterIP
